--- a/Template/imgui.ini
+++ b/Template/imgui.ini
@@ -94,7 +94,12 @@ Size=291,96
 Collapsed=0
 
 [Window][Your Window Title Goes Here]
-Pos=46,15
+Pos=368,3
+Size=347,192
+Collapsed=0
+
+[Window][GAME3001 - W2021 - Lab 2]
+Pos=60,60
 Size=347,192
 Collapsed=0
 
